# ranking-metrics

./: .gitignore  README.md  pyproject.toml
src/ranking_metrics/: embed_metrics.py  metrics.py  uncertainty.py
tests/: conftest.py  test_embed_metrics.py  test_reality_check.py  test_uncertainty.py
